# context-engineering

./: .gitignore  README.md  TEST_SCENARIO.md  pyproject.toml  requirements.txt  run.sh  server.py  streamlit_app.py
agents/: agent_graph.py
app/core/: models.py
app/core/memory/: engine.py  schema.py
dashboard/: router.py
dashboard/core/: llm_worker.py  logging_config.py
dashboard/core/memory/: engine.py  schema.py  worker.py
dashboard/templates/: dashboard.html  index.html
demos/hybrid/: __init__.py  main.py
demos/hybrid/app/core/: __init__.py
demos/hybrid/app/core/memory/: engine.py  schema.py  worker.py
demos/opaque/: __init__.py  main.py
demos/opaque/app/core/: __init__.py
demos/opaque/app/core/memory/: engine.py  schema.py  worker.py
demos/opaque/app/core/tools/: search.py
demos/user_controlled/: __init__.py  main.py
demos/user_controlled/agents/: agent_graph.py
demos/user_controlled/app/core/: __init__.py
demos/user_controlled/app/core/memory/: engine.py  schema.py  worker.py
tests/: conftest.py  test_memory_engine.py
tests/integration/: test_api_flow.py
tests/unit/: test_architectures.py  test_engine.py
