[project]
name = "travel-architect"
version = "0.1.0"
description = "AI Travel Agent with Memory and Multi-Agent Architecture"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "weaviate-client",
    "python-dotenv",
    "pydantic",
    "tenacity",
    "streamlit",
    "streamlit-chat",
    "google-generativeai",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "types-requests",
    "gradio",
    "langchain-community",
    "watchdog>=6.0.0",
]

[tool.uv]
dev-dependencies = []
